2010-01-17 [pawel]	1.0.11cvs3

	* src/att_remover.c
		- make sure text part is first in sibling's list
		- fix memleak

2010-01-17 [pawel]	1.0.11cvs2

	* src/att_remover.c
		Fix crasher, handle multipart/related mimepart correctly

2010-01-17 [pawel]	1.0.11cvs1

	* commitHelper
		add my name, freebsd portability fix

2010-01-08 [paul]	1.0.11

	1.0.11 released

2009-11-09 [colin]	1.0.10cvs1

	* src/att_remover.c
		Fix bug 1504, "Remove attachments separately".
		Patch by Pawel Pekala

2008-12-19 [paul]	1.0.10

	1.0.10 released

2008-12-07 [paul]	1.0.9cvs2

	* configure.ac
		check for compiler before setting CFLAGS

2008-11-14 [colin]	1.0.9cvs1

	* src/att_remover.c
		Sync with core

2008-10-03 [paul]	1.0.9

	1.0.9 released

2008-08-05 [colin]	1.0.8cvs3

	* src/att_remover.c
		Undeprecate GtkCTree

2008-07-29 [colin]	1.0.8cvs2

	* src/att_remover.c
		Switch the main menu to GtkUIManager

2008-07-26 [colin]	1.0.8cvs1

	* src/att_remover.c
		Switch to GtkUIManager for the context menu

2008-04-18 [paul]	1.0.8

	1.0.8 released

2008-03-12 [colin]	1.0.7cvs1

	* configure.ac
		Enable -Wall

2007-09-03 [paul]	1.0.7

	1.0.7 released

2007-08-16 [paul]	1.0.6cvs3

	* configure.ac
		use pkgconfig to check for gtk and glib

2007-07-23 [colin]	1.0.6cvs2

	* src/att_remover.c
		Fix license

2007-07-11 [colin]	1.0.6cvs1

	* COPYING
	* src/att_remover.c
		Upgrade to GPLv3 or later

2007-07-03 [paul]	1.0.6

	1.0.6 released

2007-06-21 [colin]	1.0.5cvs1

	* src/att_remover.c
		Update plugin API

2007-01-09 [paul]	1.0.5

	1.0.5 released

2006-12-15 [ticho]	1.0.4cvs1

	* configure.ac
	* src/att_remover.c
		Use check_plugin_version() for version check.

2006-12-04 [paul]	1.0.4

	1.0.4 released

2006-11-28 [paul]	1.0.3cvs3

	* configure.ac
		bump required version of Claws
		following renaming
		Thanks to Charles Edwards for the
		reminder

2006-11-27 [paul]	1.0.3cvs2

	* debian/README.Debian
	* src/Makefile.am
	* src/att_remover.c
		renaming

2006-11-07 [paul]	1.0.3cvs1

	* ChangeLog