@@ -22,3 +22,4 @@
 ( cvs diff -u -r 1.1.2.3 -r 1.1.2.4 commitHelper;  ) > 1.0.11cvs1.patchset
 ( cvs diff -u -r 1.1.2.22 -r 1.1.2.23 src/att_remover.c;  ) > 1.0.11cvs2.patchset
 ( cvs diff -u -r 1.1.2.23 -r 1.1.2.24 src/att_remover.c;  ) > 1.0.11cvs3.patchset
+( cvs diff -u -r 1.1.2.24 -r 1.1.2.25 src/att_remover.c;  ) > 1.0.11cvs4.patchset
