@@ -1,3 +1,9 @@
+2010-01-17 [pawel]	1.0.11cvs4
+
+	* src/att_remover.c
+		When setting first text mimepart after attachment deletion
+		favour text/plain over text/html or other
+
 2010-01-17 [pawel]	1.0.11cvs3
 
 	* src/att_remover.c
